# MiniMotif

./: .gitignore  README.md  minimotif.py  minimotif.yml  setup.cfg  setup.py
minimotif_scripts/: __init__.py  detection_hmm.py  detection_pwm.py  generate_sequence_logo.py  logger.py  method_selection.py  parse_genbank.py  prep_hmm_detection.py  preprocessing_bindingsites.py  reorganise_output.py
test_data/: test_genome.gb
