[metadata]
name = minimotif
version = 0.0.1
author = Hannah Augustijn
author_email = hannah.augustijn@wur.nl
description = MiniMotif: a tool for transcription factor binding site detection in bacteria
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HAugustijn/MiniMotif
project_urls = Bug Tracker = https://github.com/project/issues
classifiers =
    Programming Language :: Python :: 3
    License :: AGPL-3.0
    Operating System :: Linux or MacOS

[options]
packages = find:
python_requires = >=3.7

[pycodestyle]
max-line-length=100